# first_cmake

./: .gitignore  CMakeLists.txt  README.md
